--- a/gcp/Jenkinsfile
+++ b/gcp/Jenkinsfile
@@ -11,58 +11,114 @@ pipeline {
 		choice(name: 'gcp_project', choices: ['sagar-trial-account'], description: 'Specify gcp project' )
 		choice(name: 'gcp_region', choices: ['europe-west1'], description: 'Specify gcp region' )
 		choice(name: 'machine_type', choices: ['f1-micro'], description: 'Specify instance type' )
+		string(name: 'user_email', defaultValue: 'ganesh.pote@hotmail.com', description: 'Provide user email Id for notification') 
     }
   stages {
    stage('Preparations') {
       steps {
-	script {
-		withCredentials ([usernamePassword(credentialsId: 'aws_credentails', usernameVariable: 'aws_access_key', passwordVariable: 'aws_secret_key')]) {
-		   access_key = aws_access_key
-		   secret_key = aws_secret_key
-		}
-	}
-	dir('gcp') {
 		script {
-			data = "gcp_project=\"${gcp_project}\"\n"
-			data = data + "gcp_auth_file=\"${gcp_auth_file}\"\n"
-			data = data + "app_name=\"${app_name}\"\n"
-			data = data + "app_environment=\"${app_environment}\"\n"
-			data = data + "gcp_region=\"${gcp_region}\"\n"
-			data = data + "machine_type=\"${machine_type}\"\n"
+			withCredentials ([usernamePassword(credentialsId: 'aws_credentails', usernameVariable: 'aws_access_key', passwordVariable: 'aws_secret_key')]) {
+			access_key = aws_access_key
+			secret_key = aws_secret_key
+			}
 		}
-	writeFile file: "${BUILD_ID}_terraform.tfvars", text: data
-	sh "cat ${BUILD_ID}_terraform.tfvars"
-      	  }
-      }
+		dir('gcp') {
+			script {
+				data = "gcp_project=\"${gcp_project}\"\n"
+				data = data + "gcp_auth_file=\"${gcp_auth_file}\"\n"
+				data = data + "app_name=\"${app_name}\"\n"
+				data = data + "app_environment=\"${app_environment}\"\n"
+				data = data + "gcp_region=\"${gcp_region}\"\n"
+				data = data + "machine_type=\"${machine_type}\"\n"
+			}
+		writeFile file: "${BUILD_ID}_terraform.tfvars", text: data
+		sh "cat ${BUILD_ID}_terraform.tfvars"
+			}
+		}
     }
     stage('Terraform Init') {
       steps {
-	dir('gcp') {  
-		sh "terraform init -backend-config=\"conn_str=postgres://jenkins:jenkins@localhost/terraformstate?sslmode=disable\" -input=false"
-		//sh "terraform init  -input=false -backend-config=\"bucket=jenkins\" -backend-config=\"access_key=${access_key}\" -backend-config=\"secret_key=${secret_key}\" -backend-config=\"region=${aws_region}\" -backend-config=\"key=tf-state/${BUILD_ID}_terraform.tfstate\""
-		sh "terraform workspace new ${BUILD_ID}-state"
-		sh "terraform workspace select  ${BUILD_ID}-state"
-		sh "terraform workspace show"
-		sh "terraform state pull"
+		dir('gcp') {  
+			sh "terraform init -backend-config=\"conn_str=postgres://jenkins:jenkins@localhost/terraformstate?sslmode=disable\" -input=false"
+			//sh "terraform init  -input=false -backend-config=\"bucket=jenkins\" -backend-config=\"access_key=${access_key}\" -backend-config=\"secret_key=${secret_key}\" -backend-config=\"region=${aws_region}\" -backend-config=\"key=tf-state/${BUILD_ID}_terraform.tfstate\""
+			sh "terraform workspace new ${BUILD_ID}-state"
+			sh "terraform workspace select  ${BUILD_ID}-state"
+			sh "terraform workspace show"
+			sh "terraform state pull"
+		}
 	  }
-       }
     }
     stage('Terraform Plan') {
       steps {
-	dir('gcp') {   
-        	sh "terraform plan -out=tfplan -var-file=${BUILD_ID}_terraform.tfvars"
-        	sh "terraform show -no-color tfplan > ${BUILD_ID}_tfplan.txt"
-	}
+		dir('gcp') {   
+				sh "terraform plan -out=tfplan -var-file=${BUILD_ID}_terraform.tfvars"
+				sh "terraform show -no-color tfplan > ${BUILD_ID}_tfplan.txt"
+		}
       }
     }
    stage('Terraform Apply') {
       steps {
-	dir('gcp') {   
-        	sh "terraform apply -input=false -auto-approve tfplan"
-		sh "terraform output"
-	}
+		dir('gcp') {   
+			sh "terraform apply -input=false -auto-approve tfplan"
+			sh "terraform output"
+
+			script{
+				gcp-web-ip = sh(returnStdout: true, script: 'terraform output -raw gcp-web-ip').trim()
+				instance_id = sh(returnStdout: true, script: 'terraform output -raw instance_id').trim()
+				machine_type = sh(returnStdout: true, script: 'terraform output -raw machine_type').trim()
+				instance_name = sh(returnStdout: true, script: 'terraform output -raw instance_name').trim()
+				cpu_platform = sh(returnStdout: true, script: 'terraform output -raw cpu_platform').trim()
+				zone = sh(returnStdout: true, script: 'terraform output -raw zone').trim()
+				network_interface_name = sh(returnStdout: true, script: 'terraform output -raw network_interface_name').trim()
+				network_ip = sh(returnStdout: true, script: 'terraform output -raw network_ip').trim()
+				subnetwork = sh(returnStdout: true, script: 'terraform output -raw subnetwork').trim()
+				device_name = sh(returnStdout: true, script: 'terraform output -raw device_name').trim()
+				vpc_id = sh(returnStdout: true, script: 'terraform output -raw vpc_id').trim()
+				vpc_name = sh(returnStdout: true, script: 'terraform output -raw vpc_name').trim()
+				subnet_id = sh(returnStdout: true, script: 'terraform output -raw subnet_id').trim()
+				subnet_name = sh(returnStdout: true, script: 'terraform output -raw subnet_name').trim()
+				project_name = sh(returnStdout: true, script: 'terraform output -raw project_name').trim()
+				external-ip = sh(returnStdout: true, script: 'terraform output -raw external-ip').trim()
+				application_url = sh(returnStdout: true, script: 'terraform output -raw application_url').trim()
+			}
+		}
       }
     }
+  stage('Send Email') {
+      steps {
+		script{
+			html_body = "Dear User, <br/><br/>" 
+			html_body = html_body + "Your request number <b> ${BUILD_ID} </b> has been approved and completed.<br/><br/>"
+			html_body = html_body + "Below are the provisioning details for your reference : <br/><br/>"
+			html_body = html_body + "<table>"
+			html_body = html_body + "<tr><td>Deployment ID:</td><td>${BUILD_ID}</td></tr>"
+			html_body = html_body + "<tr><td>GCP Web IP:</td><td>${gcp-web-ip}</td></tr>"
+			html_body = html_body + "<tr><td>Application Url:</td><td>${application_url}</td></tr>"
+			html_body = html_body + "<tr><td>Instance ID:</td><td>${instance_id}</td></tr>"
+			html_body = html_body + "<tr><td>Machine Type :</td><td>${machine_type}</td></tr>"
+			html_body = html_body + "<tr><td>Instance Name:</td><td>${instance_name}</td></tr>"
+			html_body = html_body + "<tr><td>CPU Platform:</td><td>${cpu_platform}</td></tr>"
+			html_body = html_body + "<tr><td>Zone:</td><td>${zone}</td></tr>"
+			html_body = html_body + "<tr><td>Network Interface Name:</td><td>${network_interface_name}</td></tr>"
+			html_body = html_body + "<tr><td>Network IP:</td><td>${network_ip}</td></tr>"
+			html_body = html_body + "<tr><td>Subnetwork:</td><td>${subnetwork}</td></tr>"
+			html_body = html_body + "<tr><td>Device Name:</td><td>${device_name}</td></tr>"		
+			html_body = html_body + "<tr><td>VPC ID:</td><td>${vpc_id}</td></tr>"		
+			html_body = html_body + "<tr><td>VPC Name:</td><td>${vpc_name}</td></tr>"
+			html_body = html_body + "<tr><td>Subnet Id:</td><td>${subnet_id}</td></tr>"		
+			html_body = html_body + "<tr><td>Subnet Name:</td><td>${subnet_name}</td></tr>"		
+			html_body = html_body + "<tr><td>Project Name:</td><td>${project_name}</td></tr>"	
+			html_body = html_body + "<tr><td>External IP Address:</td><td>${external-ip}</td></tr>"
+			html_body = html_body + "</table>"
+			html_body = html_body + "<br/><br/>Thanks, </br>Cloud Deployment Team"
+		}
+			mail	to: '${user_email}', 
+			from: 'jenkins@example.com',
+			mimeType: 'text/html',
+			subject: "Your deployment request number \"${BUILD_ID}\" Status - Completed", 
+			body: html_body
+		  }
+  }
   stage('Terraform Destroy Approval') {
 	   steps {
 		   dir('gcp') {  
@@ -76,19 +132,19 @@ pipeline {
     }
 stage('Terraform Destroy') {
       steps {
-	dir('gcp') {   
-		sh "terraform workspace select  ${BUILD_ID}-state"
-        	sh "terraform destroy -input=false -auto-approve -var-file=${BUILD_ID}_terraform.tfvars"
-	}
+		dir('gcp') {   
+			sh "terraform workspace select  ${BUILD_ID}-state"
+				sh "terraform destroy -input=false -auto-approve -var-file=${BUILD_ID}_terraform.tfvars"
+		}
       }
     }
   }
   post {
         always {
-		dir('gcp') { 
-            archiveArtifacts artifacts: "${BUILD_ID}_tfplan.txt"
-			//cleanWs()
-		}
+			dir('gcp') { 
+				archiveArtifacts artifacts: "${BUILD_ID}_tfplan.txt"
+				//cleanWs()
+			}
         }
     }
 }
