--- a/azure/Jenkinsfile
+++ b/azure/Jenkinsfile
@@ -11,33 +11,34 @@ pipeline {
 		choice(name: 'app_environment', choices: ['dev', 'qa', 'pre-prod', 'prod'], description: 'Specify environment' )
 		choice(name: 'rg_location', choices: ['West Europe'], description: 'Specify Azure region' )
 		choice(name: 'vm_size', choices: ['Standard_B1s'], description: 'Specify VM Size' )
+		string(name: 'user_email', defaultValue: 'ganesh.pote@hotmail.com', description: 'Provide user email Id for notification') 
     }
   stages {
    stage('Preparations') {
       steps {
-	script {
-		withCredentials ([usernamePassword(credentialsId: 'azure-sub-tenant-id', usernameVariable: 'azure_subscription_id', passwordVariable: 'azure_tenant_id')]) {
-		   subscription_id = azure_subscription_id
-		   tenant_id = azure_tenant_id
-		}
-		withCredentials ([usernamePassword(credentialsId: 'azure-clientid-secret', usernameVariable: 'azure_client_id', passwordVariable: 'azure_client_secret')]) {
-		   client_id = azure_client_id
-		   client_secret = azure_client_secret
-		}
-	}
-	dir('azure') {
 		script {
-			data = "azure_subscription_id=\"${subscription_id}\"\n"
-			data = data + "azure_tenant_id=\"${tenant_id}\"\n"
-			data = data + "azure_client_id=\"${client_id}\"\n"
-			data = data + "azure_client_secret=\"${client_secret}\"\n"
-			data = data + "rg_location=\"${rg_location}\"\n"
-			data = data + "vm_size=\"${vm_size}\"\n"
+			withCredentials ([usernamePassword(credentialsId: 'azure-sub-tenant-id', usernameVariable: 'azure_subscription_id', passwordVariable: 'azure_tenant_id')]) {
+			subscription_id = azure_subscription_id
+			tenant_id = azure_tenant_id
+			}
+			withCredentials ([usernamePassword(credentialsId: 'azure-clientid-secret', usernameVariable: 'azure_client_id', passwordVariable: 'azure_client_secret')]) {
+			client_id = azure_client_id
+			client_secret = azure_client_secret
+			}
 		}
-	writeFile file: "${BUILD_ID}_terraform.tfvars", text: data
-	sh "cat ${BUILD_ID}_terraform.tfvars"
-      	  }
-      }
+		dir('azure') {
+			script {
+				data = "azure_subscription_id=\"${subscription_id}\"\n"
+				data = data + "azure_tenant_id=\"${tenant_id}\"\n"
+				data = data + "azure_client_id=\"${client_id}\"\n"
+				data = data + "azure_client_secret=\"${client_secret}\"\n"
+				data = data + "rg_location=\"${rg_location}\"\n"
+				data = data + "vm_size=\"${vm_size}\"\n"
+			}
+		writeFile file: "${BUILD_ID}_terraform.tfvars", text: data
+		sh "cat ${BUILD_ID}_terraform.tfvars"
+			}
+		}
     }
     stage('Terraform Init') {
       steps {
@@ -53,20 +54,73 @@ pipeline {
     }
     stage('Terraform Plan') {
       steps {
-	dir('azure') {   
-        	sh "terraform plan -out=tfplan -var-file=${BUILD_ID}_terraform.tfvars"
-        	sh "terraform show -no-color tfplan > ${BUILD_ID}_tfplan.txt"
-	}
+		dir('azure') {   
+			sh "terraform plan -out=tfplan -var-file=${BUILD_ID}_terraform.tfvars"
+			sh "terraform show -no-color tfplan > ${BUILD_ID}_tfplan.txt"
+		}
       }
     }
    stage('Terraform Apply') {
       steps {
-	dir('azure') {   
-        	sh "terraform apply -input=false -auto-approve tfplan"
-		sh "terraform output"
-	}
+		dir('azure') {   
+			sh "terraform apply -input=false -auto-approve tfplan"
+			sh "terraform output"
+
+			script{
+				vnet_id = sh(returnStdout: true, script: 'terraform output -raw vnet_id').trim()
+				subnet_id = sh(returnStdout: true, script: 'terraform output -raw subnet_id').trim()
+				virtual_network_name = sh(returnStdout: true, script: 'terraform output -raw virtual_network_name').trim()
+				private_ip_address = sh(returnStdout: true, script: 'terraform output -raw private_ip_address').trim()
+				security_group_id = sh(returnStdout: true, script: 'terraform output -raw security_group_id').trim()
+				security_group_name = sh(returnStdout: true, script: 'terraform output -raw security_group_name').trim()
+				resource_group_name = sh(returnStdout: true, script: 'terraform output -raw resource_group_name').trim()
+				public_ip_fqdn = sh(returnStdout: true, script: 'terraform output -raw public_ip_fqdn').trim()
+				public_ip_address = sh(returnStdout: true, script: 'terraform output -raw public_ip_address').trim()
+				vm_size = sh(returnStdout: true, script: 'terraform output -raw vm_size').trim()
+				vm_location = sh(returnStdout: true, script: 'terraform output -raw vm_location').trim()
+				vm_id = sh(returnStdout: true, script: 'terraform output -raw vm_id').trim()
+				vm_datadisk_name = sh(returnStdout: true, script: 'terraform output -raw vm_datadisk_name').trim()
+				vm_disk_size_gb = sh(returnStdout: true, script: 'terraform output -raw vm_disk_size_gb').trim()
+				vm_image = sh(returnStdout: true, script: 'terraform output -raw vm_image').trim()
+				application_url = sh(returnStdout: true, script: 'terraform output -raw application_url').trim()
+			}
+		}
       }
     }
+  stage('Send Email') {
+      steps {
+		script{
+			html_body = "Dear User, <br/><br/>" 
+			html_body = html_body + "Your request number <b> ${BUILD_ID} </b> has been approved and completed.<br/><br/>"
+			html_body = html_body + "Below are the provisioning details for your reference : <br/><br/>"
+			html_body = html_body + "<table>"
+			html_body = html_body + "<tr><td>Deployment ID:</td><td>${BUILD_ID}</td></tr>"
+			html_body = html_body + "<tr><td>VNET ID:</td><td>${vnet_id}</td></tr>"
+			html_body = html_body + "<tr><td>Application Url:</td><td>${application_url}</td></tr>"
+			html_body = html_body + "<tr><td>Subnet ID:</td><td>${subnet_id}</td></tr>"
+			html_body = html_body + "<tr><td>Vitual Network Name :</td><td>${virtual_network_name}</td></tr>"
+			html_body = html_body + "<tr><td>Private IP:</td><td>${private_ip_address}</td></tr>"
+			html_body = html_body + "<tr><td>Security Group ID:</td><td>${security_group_id}</td></tr>"
+			html_body = html_body + "<tr><td>Security Group Name:</td><td>${security_group_name}</td></tr>"
+			html_body = html_body + "<tr><td>Resource Group Name:</td><td>${resource_group_name}</td></tr>"
+			html_body = html_body + "<tr><td>Public DNS:</td><td>${public_ip_fqdn}</td></tr>"
+			html_body = html_body + "<tr><td>Public IP:</td><td>${public_ip_address}</td></tr>"
+			html_body = html_body + "<tr><td>VM Size:</td><td>${vm_size}</td></tr>"		
+			html_body = html_body + "<tr><td>VM Location:</td><td>${vm_location}</td></tr>"		
+			html_body = html_body + "<tr><td>VM Instance ID:</td><td>${vm_id}</td></tr>"
+			html_body = html_body + "<tr><td>VM data disk Name:</td><td>${vm_datadisk_name}</td></tr>"		
+			html_body = html_body + "<tr><td>VM Disk Size (GB):</td><td>${vm_disk_size_gb}</td></tr>"		
+			html_body = html_body + "<tr><td>VM Image:</td><td>${vm_image}</td></tr>"		
+			html_body = html_body + "</table>"
+			html_body = html_body + "<br/><br/>Thanks, </br>Cloud Deployment Team"
+		}
+			mail	to: '${user_email}', 
+			from: 'jenkins@example.com',
+			mimeType: 'text/html',
+			subject: "Your deployment request number \"${BUILD_ID}\" Status - Completed", 
+			body: html_body
+		  }
+  }
   stage('Terraform Destroy Approval') {
 	   steps {
 		   dir('azure') {  
@@ -78,21 +132,21 @@ pipeline {
 		   }
         }
     }
-stage('Terraform Destroy') {
+  stage('Terraform Destroy') {
       steps {
-	dir('azure') {   
-		sh "terraform workspace select  ${BUILD_ID}-state"
-        	sh "terraform destroy -input=false -auto-approve -var-file=${BUILD_ID}_terraform.tfvars"
-	}
+		dir('azure') {   
+			sh "terraform workspace select  ${BUILD_ID}-state"
+			sh "terraform destroy -input=false -auto-approve -var-file=${BUILD_ID}_terraform.tfvars"
+		}
       }
     }
   }
   post {
         always {
-		dir('azure') { 
-            archiveArtifacts artifacts: "${BUILD_ID}_tfplan.txt"
-			//cleanWs()
-		}
+			dir('azure') { 
+				archiveArtifacts artifacts: "${BUILD_ID}_tfplan.txt"
+				//cleanWs()
+			}
         }
     }
 }
