--- a/gcp/Jenkinsfile
+++ b/gcp/Jenkinsfile
@@ -69,7 +69,7 @@ pipeline {
 				instance_name = sh(returnStdout: true, script: 'terraform output -raw instance_name').trim()
 				cpu_platform = sh(returnStdout: true, script: 'terraform output -raw cpu_platform').trim()
 				zone = sh(returnStdout: true, script: 'terraform output -raw zone').trim()
-				network_ip = sh(returnStdout: true, script: 'terraform output -json network_ip | jq -r \'.[0]\'').trim()
+				network_ip = sh(returnStdout: true, script: "terraform output -json network_ip | jq -r '.[0]'").trim()
 				subnetwork = sh(returnStdout: true, script: 'terraform output -raw subnetwork').trim()
 				device_name = sh(returnStdout: true, script: 'terraform output -raw device_name').trim()
 				vpc_id = sh(returnStdout: true, script: 'terraform output -raw vpc_id').trim()
