--- a/gcp-apache/Jenkinsfile
+++ b/gcp-apache/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
 			secret_key = aws_secret_key
 			}
 		}
-		dir('gcp') {
+		dir('gcp-apache') {
 			script {
 				data = "gcp_project=\"${gcp_project}\"\n"
 				data = data + "gcp_auth_file=\"${gcp_auth_file}\"\n"
@@ -38,7 +38,7 @@ pipeline {
     }
     stage('Terraform Init') {
       steps {
-		dir('gcp') {  
+		dir('gcp-apache') {  
 			sh "terraform init -backend-config=\"conn_str=postgres://jenkins:jenkins@localhost/terraformstate?sslmode=disable\" -input=false"
 			//sh "terraform init  -input=false -backend-config=\"bucket=jenkins\" -backend-config=\"access_key=${access_key}\" -backend-config=\"secret_key=${secret_key}\" -backend-config=\"region=${aws_region}\" -backend-config=\"key=tf-state/${BUILD_ID}_terraform.tfstate\""
 			sh "terraform workspace new gcp_${BUILD_ID}_state"
@@ -50,7 +50,7 @@ pipeline {
     }
     stage('Terraform Plan') {
       steps {
-		dir('gcp') {   
+		dir('gcp-apache') {   
 				sh "terraform plan -out=tfplan -var-file=${BUILD_ID}_terraform.tfvars"
 				sh "terraform show -no-color tfplan > ${BUILD_ID}_tfplan.txt"
 		}
@@ -58,7 +58,7 @@ pipeline {
     }
    stage('Terraform Apply') {
       steps {
-		dir('gcp') {   
+		dir('gcp-apache') {   
 			sh "terraform apply -input=false -auto-approve tfplan"
 			sh "terraform output"
 
@@ -114,7 +114,7 @@ pipeline {
   }
   stage('Terraform Destroy Approval') {
 	   steps {
-		   dir('gcp') {  
+		   dir('gcp-apache') {  
             script {
                 def plan = readFile "${BUILD_ID}_tfplan.txt"
                 input message: "Do you want to destroy the plan?",
@@ -125,7 +125,7 @@ pipeline {
     }
 stage('Terraform Destroy') {
       steps {
-		dir('gcp') {   
+		dir('gcp-apache') {   
 			sh "terraform workspace select  gcp_${BUILD_ID}_state"
 				sh "terraform destroy -input=false -auto-approve -var-file=${BUILD_ID}_terraform.tfvars"
 		}
@@ -134,7 +134,7 @@ stage('Terraform Destroy') {
   }
   post {
         always {
-			dir('gcp') { 
+			dir('gcp-apache') { 
 				archiveArtifacts artifacts: "${BUILD_ID}_tfplan.txt"
 				//cleanWs()
 			}
